[package]
name = "bevy_replicon_matchbox_backend"
version = "0.16.0"
authors = [
  "rogerkueng@gmail.com",
]
edition = "2024"
description = "A matchbox backend for replicon"
readme = "README.md"
repository = "https://github.com/Occuros/bevy_replicon_matchbox.git"
keywords = [
  "bevy",
  "multiplayer",
  "replication",
  "server-authoritative",
  "replicon"
]
categories = ["game-development", "network-programming"]
license = "MIT OR Apache-2.0"
include = ["/src", "../LICENSE*"]

[dependencies]
bevy = { version = "0.16.0", default-features = false, features = ["bevy_log"] }
bevy_replicon = { version = "0.34", default-features = false }
bevy_matchbox = "0.12.0"
serde = {version = "1.0.219", features = ["serde_derive"]}

[dev-dependencies]
bevy = { version = "0.16.0", default-features = false, features = [
  "bevy_gizmos",
  "bevy_state",
  "bevy_text",
  "bevy_ui_picking_backend",
  "bevy_ui",
  "bevy_window",
  "default_font",
  "serialize",
  "x11",
] }
test-log = "0.2"
serde = "1.0"
clap = { version = "4.1", features = ["derive"] }

[features]
default = ["client", "server"]
server = ["bevy_replicon/server"]
client = ["bevy_replicon/client"]
